examples/datalog/15_arithmetic/20_division_by_variable.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_div_var
Knowledge graph 'test_div_var' created.
Switched to knowledge graph: test_div_var
> .kg use test_div_var
Switched to knowledge graph: test_div_var
> +data[(100, 10), (200, 20), (150, 5), (80, 8)].
Inserted 4 fact(s) into 'data'.
> computed(A, B, Result) :- data(A, B), Result = A / B.
Script error: Query execution failed: Unsafe rule: Atom { relation: "computed", args: [Variable("A"), Variable("B"), Variable("Result")] }. Variables ["Result"] in head do not appear in positive body atoms.
