examples/datalog/15_arithmetic/20_division_by_variable.dl
% Test: Division with variable divisor
% Expected: Divide by dynamically computed value
% Category: 15_arithmetic
% Priority: P2 - Arithmetic patterns

.kg create test_div_var
.kg use test_div_var

+data[(100, 10), (200, 20), (150, 5), (80, 8)].

% Divide first column by second
computed(A, B, Result) :- data(A, B), Result = A / B.

?- computed(A, B, R).

.kg use default
.kg drop test_div_var
